--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         try {
             await signInWithEmailAndPassword(auth, email, password);
             alert('✅ Login Successful!');
-            window.location.href = 'dashboard.html';
+            window.location.href = 'Dashboard.html';
 
         } catch (error) {
             let errorMessage = error.message;
@@ -172,4 +172,5 @@
 </script>
 
 </body>
+
 </html>
