--- a/Dashboard.html
+++ b/Dashboard.html
@@ -6,6 +6,7 @@
     <title>Attendance Management Dashboard</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="StyleSheet/Dashboard.css">
+    <link rel="stylesheet" href="StyleSheet/SideBarDesign.css">
 </head>
 <body>
 
@@ -222,3 +223,4 @@ startLiveClock();
 </body>
 
 </html>
+
