--- a/AttendanceManagement.html
+++ b/AttendanceManagement.html
@@ -6,7 +6,7 @@
     <title>Attendance Management</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="StyleSheet/AttendanceManagement.css">
-    <link rel="stylesheet" href="StyleSheet/SideBarDesign.css">
+    <link rel="stylesheet" href="StyleSheet/SideBar.css">
 </head>
 <body>
 
@@ -436,3 +436,4 @@
 </body>
 
 </html>
+
