--- a/AttendanceReport.html
+++ b/AttendanceReport.html
@@ -6,7 +6,7 @@
     <title>Attendance Report</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="StyleSheet/AttendanceReport.css">
-    <link rel="stylesheet" href="StyleSheet/SideBarDesign.css">
+    <link rel="stylesheet" href="StyleSheet/SideBar.css">
 </head>
 <body>
 
@@ -243,3 +243,4 @@
 </body>
 
 </html>
+
