--- a/Users.html
+++ b/Users.html
@@ -6,7 +6,7 @@
     <title>Users - Attendance System</title>
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="StyleSheet/Users.css">
-    <link rel="stylesheet" href="StyleSheet/SideBarDesign.css">
+    <link rel="stylesheet" href="StyleSheet/SideBar.css">
 </head>
 <body>
 
@@ -275,3 +275,4 @@
 </body>
 
 </html>
+
