--- a/Users.html
+++ b/Users.html
@@ -5,12 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Users - Attendance System</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="stylesheet" href="StyleSheet/Dashboard.css"> 
     <link rel="stylesheet" href="StyleSheet/Users.css">
     <link rel="stylesheet" href="StyleSheet/SideBar.css">
 </head>
-<body>
-
-    <div class="sidebar">
+<body style="display: flex; margin: 0;"> <div class="sidebar">
         <div class="sidebar-header">
             <div class="profile-container">
                 <div class="profile-circle">
@@ -276,6 +275,7 @@
 </body>
 
 </html>
+
 
 
 
