--- a/AttendanceReport.html
+++ b/AttendanceReport.html
@@ -8,8 +8,7 @@
     <link rel="stylesheet" href="StyleSheet/AttendanceReport.css">
     <link rel="stylesheet" href="StyleSheet/SideBar.css">
 </head>
-<body>
-
+<body style="display: flex; margin: 0;"> <div class="sidebar">
 <div class="sidebar">
     <div class="sidebar-header">
         <div class="profile-container">
@@ -243,4 +242,5 @@
 </body>
 
 </html>
+
 
