--- a/AttendanceManagement.html
+++ b/AttendanceManagement.html
@@ -8,8 +8,7 @@
     <link rel="stylesheet" href="StyleSheet/AttendanceManagement.css">
     <link rel="stylesheet" href="StyleSheet/SideBar.css">
 </head>
-<body>
-
+<body style="display: flex; margin: 0;"> <div class="sidebar">
 <div class="sidebar">
     <div class="sidebar-header">
         <div class="profile-container">
@@ -436,4 +435,5 @@
 </body>
 
 </html>
+
 
