--- a/AttendanceReport.html
+++ b/AttendanceReport.html
@@ -4,44 +4,61 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Attendance Report</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="StyleSheet/AttendanceReport.css">
     <link rel="stylesheet" href="StyleSheet/SideBar.css">
+    <style>
+        /* This ensures the sidebar and content are side-by-side */
+        body {
+            display: flex;
+            margin: 0;
+            padding: 0;
+            min-height: 100vh;
+            background-color: #f4f7f6;
+        }
+        .main-content {
+            flex-grow: 1;
+            padding: 20px;
+            overflow-y: auto;
+        }
+    </style>
 </head>
-<body style="display: flex; margin: 0;"> <div class="sidebar">
-<div class="sidebar">
-    <div class="sidebar-header">
-        <div class="profile-container">
-            <div class="profile-circle">
-                <i class="fas fa-user-tie"></i> </div>
-            <div class="profile-info">
-                <h3>Admin</h3>
-                <span>Authorized</span>
+<body>
+
+    <div class="sidebar">
+        <div class="sidebar-header">
+            <div class="profile-container">
+                <div class="profile-circle">
+                    <i class="fas fa-user-tie"></i> 
+                </div>
+                <div class="profile-info">
+                    <h3>Admin</h3>
+                    <span>Authorized</span>
+                </div>
             </div>
         </div>
-    </div>
 
-    <ul class="nav-links">
-        <li class="nav-item active">
-            <a href="Dashboard.html"><i class="fas fa-chart-line"></i> Attendance Report</a>
-        </li>
-        <li class="nav-item">
-            <a href="Users.html"><i class="fas fa-users"></i> Users</a>
-        </li>
-        <li class="nav-item">
-            <a href="Courses.html"><i class="fas fa-book"></i> Courses</a>
-        </li>
-        <li class="nav-item">
-            <a href="Settings.html"><i class="fas fa-cog"></i> Settings</a>
-        </li>
-    </ul>
+        <ul class="nav-links">
+            <li class="nav-item active">
+                <a href="Dashboard.html"><i class="fas fa-chart-line"></i> Attendance Report</a>
+            </li>
+            <li class="nav-item">
+                <a href="Users.html"><i class="fas fa-users"></i> Users</a>
+            </li>
+            <li class="nav-item">
+                <a href="Courses.html"><i class="fas fa-book"></i> Courses</a>
+            </li>
+            <li class="nav-item">
+                <a href="Settings.html"><i class="fas fa-cog"></i> Settings</a>
+            </li>
+        </ul>
 
-    <div class="sidebar-footer">
-        <li class="nav-item logout">
-            <a href="#" id="logoutBtn"><i class="fas fa-sign-out-alt"></i> Logout</a>
-        </li>
+        <div class="sidebar-footer">
+            <li class="nav-item logout">
+                <a href="#" id="logoutBtn"><i class="fas fa-sign-out-alt"></i> Logout</a>
+            </li>
+        </div>
     </div>
-</div>
 
     <div class="main-content">
         <header>
@@ -242,5 +259,6 @@
 </body>
 
 </html>
+
 
 
