--- a/AttendanceManagement.html
+++ b/AttendanceManagement.html
@@ -7,13 +7,33 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="StyleSheet/AttendanceManagement.css">
     <link rel="stylesheet" href="StyleSheet/SideBar.css">
+    <style>
+        /* Essential for side-by-side layout */
+        body {
+            display: flex;
+            margin: 0;
+            background-color: #f4f7f6;
+            min-height: 100vh;
+        }
+        .content {
+            flex-grow: 1;
+            padding: 20px;
+            overflow-y: auto;
+        }
+        .dropdown-menu a.active-link {
+            background-color: #008080;
+            color: white !important;
+        }
+    </style>
 </head>
-<body style="display: flex; margin: 0;"> <div class="sidebar">
+<body>
+
 <div class="sidebar">
     <div class="sidebar-header">
         <div class="profile-container">
             <div class="profile-circle">
-                <i class="fas fa-user-tie"></i> </div>
+                <i class="fas fa-user-tie"></i> 
+            </div>
             <div class="profile-info">
                 <h3>Admin</h3>
                 <span>Authorized</span>
@@ -23,7 +43,7 @@
 
     <ul class="nav-links">
         <li class="nav-item active">
-            <a href="Dashboard.html"><i class="fas fa-chart-line"></i> Attendance Report</a>
+            <a href="Dashboard.html"><i class="fas fa-chart-line"></i> Dashboard</a>
         </li>
         <li class="nav-item">
             <a href="Users.html"><i class="fas fa-users"></i> Users</a>
@@ -43,20 +63,19 @@
     </div>
 </div>
 
-    <div class="content">
-        <header>
-            <h1>Attendance Management</h1>
-            <div class="menu-container">
-                <button class="menu-button" onclick="toggleMenu()">
-                    &#9776;
-                </button>
-        
-                <div id="myDropdown" class="dropdown-menu">
-                    <a href="AttendanceManagement.html" class="active-link">Attendance Management</a>
-                    <a href="AttendanceReport.html">Attendance Report</a>
-                </div>
+<div class="content">
+    <header>
+        <h1>Attendance Management</h1>
+        <div class="menu-container">
+            <button class="menu-button" onclick="toggleMenu()">
+                &#9776;
+            </button>
+            <div id="myDropdown" class="dropdown-menu">
+                <a href="AttendanceManagement.html" class="active-link">Attendance Management</a>
+                <a href="AttendanceReport.html">Attendance Report</a>
             </div>
-        </header>
+        </div>
+    </header>
         <div class="filters">
             <div class="filter-group" style="position: relative;">
                 <label style="display: block; margin-bottom: 5px;">Courses</label>
@@ -435,5 +454,6 @@
 </body>
 
 </html>
+
 
 
