--- a/AttendanceReport.html
+++ b/AttendanceReport.html
@@ -5,31 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Attendance Report</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="stylesheet" href="StyleSheet/Dashboard.css"> 
     <link rel="stylesheet" href="StyleSheet/AttendanceReport.css">
     <link rel="stylesheet" href="StyleSheet/SideBar.css">
-    <style>
-        body {
-            display: flex;
-            margin: 0;
-            padding: 0;
-            min-height: 100vh;
-            background-color: #f4f7f6;
-        }
-        .main-content {
-            flex-grow: 1;
-            padding: 20px;
-            overflow-y: auto;
-        }
-        /* Style for the active link inside the Burger Dropdown */
-        .dropdown-menu a.active-link {
-            background-color: var(--teal-primary, #008080);
-            color: white !important;
-        }
-    </style>
 </head>
-<body>
-
-    <div class="sidebar">
+<body style="display: flex; margin: 0;"> <div class="sidebar">
         <div class="sidebar-header">
             <div class="profile-container">
                 <div class="profile-circle">
@@ -43,10 +23,10 @@
         </div>
 
         <ul class="nav-links">
-            <li class="nav-item active">
-                <a href="Dashboard.html"><i class="fas fa-chart-line"></i> Dashboard</a>
-            </li>
             <li class="nav-item">
+                <a href="Dashboard.html"><i class="fas fa-chart-line"></i> Attendance Report</a>
+            </li>
+            <li class="nav-item"> 
                 <a href="Users.html"><i class="fas fa-users"></i> Users</a>
             </li>
             <li class="nav-item">
@@ -279,6 +259,7 @@
 </body>
 
 </html>
+
 
 
 
