--- a/AttendanceManagement.html
+++ b/AttendanceManagement.html
@@ -5,62 +5,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Attendance Management</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="stylesheet" href="StyleSheet/Dashboard.css"> 
     <link rel="stylesheet" href="StyleSheet/AttendanceManagement.css">
     <link rel="stylesheet" href="StyleSheet/SideBar.css">
-    <style>
-        /* Essential for side-by-side layout */
-        body {
-            display: flex;
-            margin: 0;
-            background-color: #f4f7f6;
-            min-height: 100vh;
-        }
-        .content {
-            flex-grow: 1;
-            padding: 20px;
-            overflow-y: auto;
-        }
-        .dropdown-menu a.active-link {
-            background-color: #008080;
-            color: white !important;
-        }
-    </style>
 </head>
-<body>
-<div class="sidebar">
-    <div class="sidebar-header">
-        <div class="profile-container">
-            <div class="profile-circle">
-                <i class="fas fa-user-tie"></i> 
-            </div>
-            <div class="profile-info">
-                <h3>Admin</h3>
-                <span>Authorized</span>
+<body style="display: flex; margin: 0;"> <div class="sidebar">
+        <div class="sidebar-header">
+            <div class="profile-container">
+                <div class="profile-circle">
+                    <i class="fas fa-user-tie"></i> 
+                </div>
+                <div class="profile-info">
+                    <h3>Admin</h3>
+                    <span>Authorized</span>
+                </div>
             </div>
         </div>
-    </div>
 
-    <ul class="nav-links">
-        <li class="nav-item active">
-            <a href="Dashboard.html"><i class="fas fa-chart-line"></i> Dashboard</a>
-        </li>
-        <li class="nav-item">
-            <a href="Users.html"><i class="fas fa-users"></i> Users</a>
-        </li>
-        <li class="nav-item">
-            <a href="Courses.html"><i class="fas fa-book"></i> Courses</a>
-        </li>
-        <li class="nav-item">
-            <a href="Settings.html"><i class="fas fa-cog"></i> Settings</a>
-        </li>
-    </ul>
+        <ul class="nav-links">
+            <li class="nav-item">
+                <a href="Dashboard.html"><i class="fas fa-chart-line"></i> Attendance Report</a>
+            </li>
+            <li class="nav-item"> 
+                <a href="Users.html"><i class="fas fa-users"></i> Users</a>
+            </li>
+            <li class="nav-item">
+                <a href="Courses.html"><i class="fas fa-book"></i> Courses</a>
+            </li>
+            <li class="nav-item">
+                <a href="Settings.html"><i class="fas fa-cog"></i> Settings</a>
+            </li>
+        </ul>
 
-    <div class="sidebar-footer">
-        <li class="nav-item logout">
-            <a href="#" id="logoutBtn"><i class="fas fa-sign-out-alt"></i> Logout</a>
-        </li>
+        <div class="sidebar-footer">
+            <li class="nav-item logout">
+                <a href="#" id="logoutBtn"><i class="fas fa-sign-out-alt"></i> Logout</a>
+            </li>
+        </div>
     </div>
-</div>
 
 <div class="content">
     <header>
@@ -453,6 +435,7 @@
 </body>
 
 </html>
+
 
 
 
