--- a/AttendanceReport.html
+++ b/AttendanceReport.html
@@ -53,7 +53,7 @@
                 </button>
         
                 <div id="myDropdown" class="dropdown-menu">
-                    <a href="Dashboard.html">Attendance Management</a>
+                    <a href="AttendanceManagement.html">Attendance Management</a>
                     <a href="AttendanceReport.html" class="active-link">Attendance Report</a>
                 </div>
             </div>
@@ -259,6 +259,7 @@
 </body>
 
 </html>
+
 
 
 
