--- a/AttendanceManagement.html
+++ b/AttendanceManagement.html
@@ -46,7 +46,7 @@
 
 <div class="content">
     <header>
-        <h1>Attendance Management</h1>
+        <h1 style="text-decoration:bold;">Attendance Management</h1>
         <div class="menu-container">
             <button class="menu-button" onclick="toggleMenu()">
                 &#9776;
@@ -435,6 +435,7 @@
 </body>
 
 </html>
+
 
 
 
