--- a/Users.html
+++ b/Users.html
@@ -24,7 +24,7 @@
 
         <ul class="nav-links">
             <li class="nav-item">
-                <a href="Dashboard.html"><i class="fas fa-chart-line"></i> Attendance Report</a>
+                <a href="Dashboard.html"><i class="fas fa-chart-line"></i> Dashboard</a>
             </li>
             <li class="nav-item active"> 
                 <a href="Users.html"><i class="fas fa-users"></i> Users</a>
@@ -285,6 +285,7 @@
 </body>
 
 </html>
+
 
 
 
