--- a/Users.html
+++ b/Users.html
@@ -62,28 +62,29 @@
 
         <h3 class="admin-label">Admin: <span>Mr. Jeorge Rey A. Mancilla</span></h3>
 
-        <div class="profile-card">
-            <div class="card-content">
-                <h2 class="card-title">Teacher's Profile</h2>
-                <button class="btn-edit-profile">✎ Edit profile</button>
-                
-                <div class="profile-details">
-                    <div class="detail-item"><strong>Name:</strong> <u>Jeorge Rey Bugwak</u></div>
-                    <div class="detail-item"><strong>Age:</strong> <u>69 y/o</u></div>
-                    <div class="detail-item"><strong>Birthdate:</strong> <u>9/09/1969</u></div>
-                    <div class="detail-item"><strong>Gender:</strong> MALE</div>
-                    <div class="detail-item"><strong>Birthplace:</strong> <u>Isla Canto pangi</u></div>
-                    <div class="detail-item"><strong>Current Address:</strong> <u>Crab Island</u></div>
-                    <div class="detail-item"><strong>Nationality:</strong> <u>Half spanish</u></div>
-                    <div class="detail-item"><strong>Religion:</strong> <u>Iglesia ni ChrisBrown</u></div>
-                    <div class="detail-item"><strong>Status:</strong> MARRIED</div>
-                </div>
-            </div>
-            
-            <div class="profile-photo-container">
-                <img src="avatar.png" alt="Profile Photo">
-            </div>
+     <div class="profile-card">
+    <div class="card-content">
+        <h2 class="card-title">Teacher's Profile</h2>
+        <div class="profile-details">
+            <div class="detail-item"><strong>Name:</strong> <u>Jeorge Rey Bugwak</u></div>
+            <div class="detail-item"><strong>Age:</strong> <u>69 y/o</u></div>
+            <div class="detail-item"><strong>Birthdate:</strong> <u>9/09/1969</u></div>
+            <div class="detail-item"><strong>Gender:</strong> MALE</div>
+            <div class="detail-item"><strong>Birthplace:</strong> <u>Isla Canto pangi</u></div>
+            <div class="detail-item"><strong>Current Address:</strong> <u>Crab Island</u></div>
+            <div class="detail-item"><strong>Nationality:</strong> <u>Half spanish</u></div>
+            <div class="detail-item"><strong>Religion:</strong> <u>Iglesia ni ChrisBrown</u></div>
+            <div class="detail-item"><strong>Status:</strong> MARRIED</div>
         </div>
+    </div>
+
+    <div class="photo-column">
+        <div class="profile-photo-container">
+            <img src="avatar.png" alt="Profile Photo">
+        </div>
+        <button class="btn-edit-profile">✎ Edit profile</button>
+    </div>
+</div>
     </div>
     </body>
     <div id="studentModal" class="modal-overlay" style="display: none;">
@@ -267,6 +268,7 @@
 </body>
 
 </html>
+
 
 
 
