--- a/Users.html
+++ b/Users.html
@@ -60,7 +60,7 @@
             <button class="btn-add-student" onclick="openModal()">+ Student</button>
         </div>
 
-        <h3 class="admin-label">Admin: <span>Mr. Jeorge Rey A. Mancilla</span></h3>
+        <h3 class="admin-label">Hello! <span>Mr. Jeorge Rey A. Mancilla</span></h3>
 
      <div class="profile-card">
     <div class="card-content">
@@ -268,6 +268,7 @@
 </body>
 
 </html>
+
 
 
 
