--- a/index.html
+++ b/index.html
@@ -59,13 +59,6 @@
                 <div class="signup-links">      
                     <a href="#" onclick="showLogin()">Login here</a>
                 </div>
-                <input type="hidden" id="regAge" value="N/A">
-                <input type="hidden" id="regBirthdate" value="N/A">
-                <input type="hidden" id="regGender" value="N/A">
-                <input type="hidden" id="regBirthplace" value="N/A">
-                <input type="hidden" id="regAddress" value="N/A">
-                <input type="hidden" id="regNationality" value="N/A">
-                <input type="hidden" id="regStatus" value="N/A">
             </form>
         </div>
     </div>
@@ -129,6 +122,7 @@
                 nationality: "N/A",
                 religion: "N/A",
                 status: "N/A",
+                profilePic: "avatar.png",
                 createdAt: new Date().toISOString()
             });
 
@@ -189,4 +183,5 @@
 </body>
 
 </html>
+
 
