--- a/Dashboard.html
+++ b/Dashboard.html
@@ -45,7 +45,7 @@
 </div>
 
     <div class="main-content">
-        <header>
+        <header class="top-header">
             <h1>DASHBOARD</h1>
             <div id="liveClock" style="font-size: 1rem; color: #555; font-weight: 500; margin-top: -10px;">
             Loading date and time...
@@ -223,5 +223,6 @@ startLiveClock();
 </body>
 
 </html>
+
 
 
