--- a/AttendanceReport.html
+++ b/AttendanceReport.html
@@ -45,7 +45,7 @@
     </div>
 
     <div class="main-content">
-        <header>
+         <header class="top-header">
             <h1>Attendance Report</h1>
             <div class="menu-container">
                 <button class="menu-button" onclick="toggleMenu()">
@@ -259,6 +259,7 @@
 </body>
 
 </html>
+
 
 
 
