--- a/AttendanceManagement.html
+++ b/AttendanceManagement.html
@@ -45,7 +45,7 @@
     </div>
 
 <div class="content">
-    <header>
+     <header class="top-header">
         <h1 style="text-decoration:bold;">Attendance Management</h1>
         <div class="menu-container">
             <button class="menu-button" onclick="toggleMenu()">
@@ -435,6 +435,7 @@
 </body>
 
 </html>
+
 
 
 
