--- a/AttendanceManagement.html
+++ b/AttendanceManagement.html
@@ -102,9 +102,9 @@
             <table>
                 <thead class="table-header">
                     <tr>
-                        <th style="width: 40%;">Name</th>
-                        <th style="width: 30%;">Student ID</th>
-                        <th style="width: 30%;">Status</th>
+                        <th style="width: 40%; color:white;">Name</th>
+                        <th style="width: 30%; color:white;">Student ID</th>
+                        <th style="width: 30%; color:white;">Status</th>
                     </tr>
                 </thead>
                 <tbody id="studentTableBody">
@@ -435,6 +435,7 @@
 </body>
 
 </html>
+
 
 
 
