--- a/Users.html
+++ b/Users.html
@@ -56,26 +56,42 @@
      <h3 class="admin-label">Hello! <span id="display-admin-name">Loading...</span></h3>
 
 <div class="profile-card">
+    <div class="card-glow"></div>
+    
     <div class="card-content">
-        <h2 class="card-title">Teacher's Profile</h2>
+        <div class="card-header-wrapper">
+             <h2 class="card-title">Teacher's Profile</h2>
+             <div class="status-badge" id="display-status-badge">Active</div>
+        </div>
+        
         <div class="profile-details">
-            <div class="detail-item"><strong>Name:</strong> <u id="display-name">Loading...</u></div>
-            <div class="detail-item"><strong>Age:</strong> <u id="display-age">Loading...</u></div>
-            <div class="detail-item"><strong>Birthdate:</strong> <u id="display-birthdate">Loading...</u></div>
-            <div class="detail-item"><strong>Gender:</strong> <span id="display-gender">Loading...</span></div>
-            <div class="detail-item"><strong>Email:</strong> <u id="display-email">Loading...</u></div>
-            <div class="detail-item"><strong>Birthplace:</strong> <u id="display-birthplace">Loading...</u></div>
-            <div class="detail-item"><strong>Current Address:</strong> <u id="display-address">Loading...</u></div>
-            <div class="detail-item"><strong>Nationality:</strong> <u id="display-nationality">Loading...</u></div>
-            <div class="detail-item"><strong>Status:</strong> <span id="display-status">Loading...</span></div>
+            <div class="detail-item">
+                <i class="fas fa-id-card"></i>
+                <div><strong>Name</strong><span id="display-name">Loading...</span></div>
+            </div>
+            <div class="detail-item">
+                <i class="fas fa-birthday-cake"></i>
+                <div><strong>Birthdate</strong><span id="display-birthdate">Loading...</span></div>
+            </div>
+            <div class="detail-item">
+                <i class="fas fa-envelope"></i>
+                <div><strong>Email</strong><span id="display-email">Loading...</span></div>
+            </div>
+            <div class="detail-item">
+                <i class="fas fa-map-marker-alt"></i>
+                <div><strong>Address</strong><span id="display-address">Loading...</span></div>
+            </div>
         </div>
     </div>
 
     <div class="photo-column">
         <div class="profile-photo-container">
             <img src="avatar.png" id="display-photo" alt="Profile Photo">
+            <div class="photo-overlay"></div>
         </div>
-        <button class="btn-edit-profile" onclick="openEditModal()">✎ Edit profile</button>
+        <button class="btn-edit-profile" onclick="openEditModal()">
+            <i class="fas fa-pen-nib"></i> Edit profile
+        </button>
     </div>
 </div>
 
@@ -309,6 +325,7 @@
         document.getElementById('logoutBtn').addEventListener('click', () => { signOut(auth).then(() => window.location.href = 'index.html'); });
     </script>
 </html>
+
 
 
 
