--- a/Dashboard.html
+++ b/Dashboard.html
@@ -99,7 +99,7 @@
         </li>
     </div>
 </div>
-
+</div>
 <div class="main-content">
     <header class="top-header">
         <h1>DASHBOARD</h1>
@@ -262,6 +262,7 @@
 </script>
 </body>
 </html>
+
 
 
 
